--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h2 {
   font-size: 5rem;
   font-weight: bold;
   padding: 3rem;
+  margin-top: -10%;
 }
 
 .coming-soon {
@@ -41,6 +42,11 @@ h2 {
 }
 
 ::selection {
+  background: #2b2b2b;
+  color: #ebebeb;
+}
+
+::-moz-selection {
   background: #2b2b2b;
   color: #ebebeb;
 }
